// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render the homepage 1`] = `
<ThemeProvider>
  <GlobalStyleComponent />
  <MatomoProvider
    value={MatomoTracker {}}
  >
    <AppStateProvider
      initialState={
        Object {
          "ui": Object {
            "backdropKeys": Array [],
          },
        }
      }
      reducer={[Function]}
    >
      <div
        className="c-dashboard c-dashboard--page-type-data "
      >
        <Connect(Header)
          embedPreviewMode={false}
          hasEmbedButton={false}
          hasMaxWidth={false}
          hasPrintButton={true}
          homePage={false}
          printMode={false}
          printOrEmbedMode={false}
          user={Object {}}
        />
        <AppBody
          bodyClasses=""
          currentPage="DATA"
          embedPreviewMode={false}
          hasMaxWidth={false}
          homePage={false}
          visibilityError={false}
        />
      </div>
    </AppStateProvider>
  </MatomoProvider>
</ThemeProvider>
`;

exports[`App should render the mapview 1`] = `
<ThemeProvider>
  <GlobalStyleComponent />
  <MatomoProvider
    value={MatomoTracker {}}
  >
    <AppStateProvider
      initialState={
        Object {
          "ui": Object {
            "backdropKeys": Array [],
          },
        }
      }
      reducer={[Function]}
    >
      <div
        className="c-dashboard c-dashboard--page-type-data "
      >
        <Connect(Header)
          embedPreviewMode={false}
          hasEmbedButton={true}
          hasMaxWidth={false}
          hasPrintButton={true}
          homePage={false}
          printMode={false}
          printOrEmbedMode={false}
          user={Object {}}
        />
        <AppBody
          bodyClasses=""
          currentPage="DATA"
          embedPreviewMode={false}
          hasMaxWidth={false}
          homePage={false}
          visibilityError={false}
        />
      </div>
    </AppStateProvider>
  </MatomoProvider>
</ThemeProvider>
`;
